# multi_robotcar

./: CMakeLists.txt  README.md  package.xml
include/: radar_robotcar_player.h
launch/: radar_robotcar.launch  radar_robotcar_player.launch  radar_robotcar_standalone.launch
launch/mapviz/: radar_robotcar_dataset_ros.mvc
launch/rviz/: radar_robotcar_player.rviz  radar_robotcar_player_and_hdl.rviz
launch/urdf/: robotcar.xml
msg/: OxfordTime.msg
scripts/: generate_urdf.sh
src/: radar_robotcar_player.cpp  radar_robotcar_player_node.cpp
